20070304 ui.c: swap Kempston mouse buttons (bug #1507684)
	 (Release-0_8_0-branch).
20070306 sound.c: don't leak memory for tape_buf (Release-0_8_0-branch) (Fred).
20070306 display.c: don't overrun line_times array (Release-0_8_0-branch)
	 (Fred).
20070310 man/fuse.1: add divide url (Release-0_8_0-branch) (Fred).
20070311 machines/spec_se.c: fix marking Dock and EXROM banks as writable in
         the SE (Release-0_8_0-branch) (thanks, Andrew Owen) (Fred).
20070317 compat/mkstemp.c: remove abberant break (thanks, Marek Januszewski)
	 (Release-0_8_0-branch).
20070321 periph.c: when stopping RZX playback due to overrun, ensure the
	 change is picked up in z80_do_opcodes() (thanks, Julian Wiseman)
	 (Release-0_8_0-branch).
20070327 joystick.c: don't prompt for joystick config changes when loading a
         snap during RZX playback (Release-0_8_0-branch)
	 (thanks, Julian Wiseman) (Fred).
20070404 printer.c: don't buffer output so text is available as it is
         printed (Release-0_8_0-branch) (Fred).
20070409 ChangeLog,README,configure.in,man/fuse.1: updates for 0.8 release
	 (Release-0_8_0-branch).
20070409 rzx.c: change over to the 'release' DSA key (Release-0_8_0-branch).
20070409 fuse.c: remove warning (Release-0_8_0-branch).
20070410 rzx.c: don't allow use of rollback commands during playback (thanks,
	 Julian Wiseman) (Release-0_8_0-branch).
20070411 README: these aren't all IDE interfaces (Release-0_8_0-branch).
20070411 fuse.c: update copyright date to 2007 (Release-0_8_0-branch).
20070416 widget/Makefile.am: distribute fuse.font.sbf and mkfusefont.pl
         (Release-0_8_0-branch) (Fred).
20070424 TAG: Release-0_8_0 (Release-0_8_0-branch).
20070425 uidisplay.c,widget/menu.c: initialise border in help screen and
         center keyboard picture on help screen (thanks, Alberto Garcia)
         (Release-0_8_0-branch).
20070425 widget/pokefinder.c: fix up for non-proportional display
	 (thanks, Alberto Garcia) (Release-0_8_0-branch).